initialized all models and database config

--- a/Backend/src/database/config/config.json
+++ b/Backend/src/database/config/config.json
@@ -1,26 +1,26 @@
 {
   "development": {
     "username": "postgres",
-    "password": "",
+    "password": null,
     "database": "IDCD",
-    "host": "127.0.0.1",
-    "dialect": "mysql",
+    "host": "localhost",
+    "dialect": "postgres",
     "port":"5432"
   },
   "test": {
     "username": "postgres",
-    "password": "",
+    "password": null,
     "database": "IDCD",
     "host": "127.0.0.1",
-    "dialect": "mysql",
+    "dialect": "postgres",
     "port": "5432"
   },
   "production": {
     "username": "postgres",
-    "password": "",
+    "password": null,
     "database": "IDCD",
     "host": "127.0.0.1",
-    "dialect": "mysql",
+    "dialect": "postgres",
     "port": "5432"
   }
 }
