created the logic for Gallery functions

--- a/Backend/.env
+++ b/Backend/.env
@@ -4,3 +4,6 @@ REDIS_USERNAME=default
 REDIS_PASSWORD=AV4XqYkyMhoZQrQfwHSDCLqVKJH83sct
 REDIS_HOST=redis-13126.c11.us-east-1-2.ec2.cloud.redislabs.com
 REDIS_PORT=13126
+
+AllowedOrigin1=http://localhost:5173
+AllowedOrigin2=http://localhost:5174
