--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -15,12 +15,14 @@
     "@mui/icons-material": "^7.3.6",
     "@mui/material": "^7.3.6",
     "@tailwindcss/vite": "^4.1.17",
+    "@tanstack/react-query": "^5.90.12",
     "chart.js": "^4.5.1",
     "react": "^19.1.1",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.6",
+    "react-toastify": "^11.0.5",
     "zod": "^4.1.13"
   },
   "devDependencies": {
