added new files

--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,8 +5,9 @@
   "type": "commonjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node src/index.ts",
-    "build": "tsc"
+    "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/index.ts",
+    "build": "tsc",
+    "seeding": "npx ts-node src/database/seedings/userSeeding.ts "
   },
   "keywords": [],
   "author": "",
