--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.6",
+    "react-spinners": "^0.17.0",
     "react-toastify": "^11.0.5",
     "zod": "^4.1.13"
   },
